# AEDProject1

./: .gitignore  AEDproj_final.pptx  CMakeLists.txt  Class.cpp  Class.h  ClassInterface.h  Datamanager.cpp  Datamanager.h  Doxyfile  Filereader.cpp  Filereader.h  Request.cpp  Request.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  StudentInterface.h  main.cpp  request_log.txt
Data/: request_log.txt  requestlogdata.txt
Data/schedule/: .~lock.classes.csv#  .~lock.classes_per_uc.csv#  .~lock.students_classes.csv#  classes.csv  classes_per_uc.csv  students_classes.csv
html/: _class_8cpp.html  _class_8h.html  _class_8h_source.html  _consult.html  _datamanager_8cpp.html  _datamanager_8h.html  _datamanager_8h_source.html  _extra.html  _extra_functions.html  _filereader_8cpp.html  _filereader_8h.html  _filereader_8h_source.html  _request_8cpp.html  _request_8h.html  _request_8h_source.html  _requests.html  _schedule_8cpp.html  _schedule_8h.html  _schedule_8h_source.html  _student_8cpp.html  _student_8h.html  _student_8h_source.html  annotated.html  class_class-members.html  class_class.html  class_datamanager-members.html  class_datamanager.html  class_filereader-members.html  class_filereader.html  class_request-members.html  class_request.html  class_schedule-members.html  class_schedule.html  class_student-members.html  class_student.html  classes.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_c13f6416813340f4a4358ca3d2f08f85.html  dir_c8284c1556687c316ef5a29057b070f8.html  dir_dd8c3e830a285e9f4b22b2551e0f5509.html  (+11 more)
html/search/: all_0.js  all_1.js  all_10.js  (+54 more)
